--- a/myapp/templates/index.html
+++ b/myapp/templates/index.html
@@ -3,7 +3,12 @@
 
 <head>
     {% load static %}
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta charset="utf-8" />
+    <link rel="icon" href="/favicon.ico" />
+    <meta name="viewport" content="width=device-width, initial-scale=1" />
+    <meta name="description" content="Covid Vaccine Finder Using Python Django made by Nakul Gupta" />
+
+    <title>Covid Vaccine Finder</title>
     <style type="text/css">
         html,
         body {
