--- a/myapp/templates/index.html
+++ b/myapp/templates/index.html
@@ -54,6 +54,14 @@
             display: none !important;
         }
 
+        div.dataTables_wrapper {
+            overflow: hidden;
+        }
+
+        div.dataTables_wrapper .row:nth-child(2) {
+            overflow: auto;
+        }
+
         div.dataTables_wrapper div.dataTables_filter {
             display: none !important;
         }
